# Algorithm

./: .gitignore  1-1  1-1.cpp  1-6-2  1-6-3  CMakeLists.txt  README.md  a.out  eoj1.cpp  main  算法笔记.md
HDU/: 1114.cpp  2000.cpp  2001.cpp  2002.cpp  2003.cpp  2004.cpp  2005.cpp  2006.cpp  2007.cpp  2008.cpp  2009.cpp  2010.cpp  2011.cpp  2012.cpp  2013.cpp  2014.cpp  2015.cpp  2016.cpp  2017.cpp  2018.cpp  2019.cpp  2020.cpp  2021.cpp  2022.cpp  2023.cpp  3346.cpp
POJ/: POJ1064.cpp  POJ1064AC.cpp  POJ1064AC2.cpp  POJ4078-最小堆.cpp  POJ4135.cpp
XLY/: 2017-ecnu计算机-A-打印.cpp  2017-ecnu计算机-B-1的个数最多的整数.cpp  2017-ecnu计算机-C-不等式.cpp  2017-ecnu计算机-E-有钱人买钻石.cpp  2017-ecnu计算机-E-有钱人买钻石2.cpp  2017-ecnu计算机-F-送分题.cpp  2017-pku-2-单词倒排.cpp  2017-pku-3-生存游戏.cpp  2017-pku-4-特殊密码锁.cpp  2017-pku信科-A-判决素数个数.cpp  2017-pku信科-B-编码字符串.cpp  2017-pku信科-C-岛屿周长.cpp  2017-pku信科-D-Safecracker.cpp  2017-pku信科-E-怪盗基德的滑翔翼.cpp  2017-pku信科-G-实现堆结构.cpp  2017-pku信科-H-Subway.cpp  2017-pku叉院-1-点排序.cpp  2017-pku叉院-5-开餐馆.cpp  2017-pku叉院-7-双队列.cpp  2018-ecnu计算机-A-图像卷积.cpp  2018-ecnu计算机-B-⽩网吧.cpp  2018-ecnu计算机-B-⽩网吧满分AC.cpp  2018-ecnu计算机-C-皇后问题.cpp  2018-ecnu计算机-D-素数之基.cpp  2018-tju-1.cpp  2018-tju-2.cpp  2018-tju-3.cpp  2019-pku信科-A-数与字符串.cpp  2019-pku信科-B-打印月历.cpp  2019-pku信科-C-Hopscotch.cpp  2019-pku信科-D-上楼梯.cpp  2019-pku信科-F-跳蛙.cpp  2019-pku信科-F-跳蛙找规律.cpp  2019-pku信科-G-FallingLeaves.cpp  2019-tju-2.cpp  2019-tju-3.cpp
XLY/华东师范大学机试/: 1.cpp  2.cpp  3.cpp  4.cpp  d.cpp
aoapc-bac2nd/chapter 1/: 1-5.c  1.c
aoapc-bac2nd/chapter 2/: 2.c  exercise2-1.c  exercise2-2.c  exercise2-3.c
aoapc-bac2nd/chapter 3/: 3-1.c  3-4.c  example3-3.c  example3-4.c  example3-6.c  exercise3-2.c  exercise3-2.cpp  exercise3-3.c  exercise3-4.cpp
aoapc-bac2nd/chapter 4/: 4-1.c  4-10.c  4-2.c  4-4.c  4-8.c  example4-1.c  example4-2.c  exercise4-1.cpp  exercise4-1_.cpp  exercise4-2.c
chapter 1/: 1-1  1-6-1  POJ-1852_Ants  POJ-1852_Ants.cpp  main.cpp
chapter 2/: 2-1-1  2-1-2_stack  2-1-3_queue  2-1-3_queue.cpp  2-1-4_dfs  2-1-4_dfs.cpp  2-1-5_bfs  2-1-5_bfs.cpp  POJ-2386_Lake_Counting  POJ-2386_Lake_Counting.cpp
codejam/: codejam-Vestigium.cpp  codejam-nesting.py  codejam-parenting.cpp  codejam-pattern-matching.cpp  codejam-pattern-matching.py
leetcode/: 20-有效的括号.cpp  230-二叉搜索树第k小元素.cpp  239-滑动窗口最大值.cpp  34-在排序数组中查找元素的第一个和最后一个位置.cpp  347-前k个高频元素.cpp  399-除法求值.cpp  399-除法求值_题解.cpp  739-每日温度.cpp  997-找到小镇法官.cpp  InsertionSort.cpp  MergeSort.cpp  QuickSort.cpp  practice_bbsort.cpp  practice_mgsort.cpp  practice_qksort.cpp  二分搜索.cpp
大话数据结构/: 堆.cpp
洛谷/: 1616.cpp  1776.cpp  1853.cpp  2925.cpp
背包九讲/: 背包九讲(一)-01背包问题.cpp  背包九讲(七)-有依赖的背包问题.cpp  背包九讲(三)-多重背包问题.cpp  背包九讲(二)-完全背包问题.cpp  背包九讲(五)-二维费用背包问题.cpp  背包九讲(六)-分组背包问题.cpp  背包九讲(四)-混合背包问题.cpp
(+292 files in other folders)
